platform/kube/flux-system/apps/metrics.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: metrics
spec:
  replicas: 1
  selector:
    matchLabels:
      app: metrics
  template:
    metadata:
      labels:
        app: metrics
    spec:
      containers:
        - name: metrics
          image: skeletondocker/istio-services:metrics-f868862a05d60df92f8082c59aa9d85bfc39d289
          ports:
            - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: metrics
spec:
  selector:
    app: metrics
  ports:
    - port: 8080
      name: http
