platform/kube/flux-system/apps/product.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: product
  template:
    metadata:
      labels:
        app: product
    spec:
      containers:
        - name: product
          image: skeletondocker/istio-services:product-e75937d32913e8f181e91cd0db7e56d5199e4204
          ports:
            - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: product
  namespace: default
spec:
  selector:
    app: product
  ports:
    - port: 8080
      name: http
