platform/kube/flux-system/apps/ratings.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ratings
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ratings
  template:
    metadata:
      labels:
        app: ratings
    spec:
      containers:
        - name: ratings
          image: skeletondocker/istio-services:ratings-04150219df454cb9192926fda7fba33386ec76b0
          ports:
            - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: ratings
  namespace: default
spec:
  selector:
    app: ratings
  ports:
    - port: 8080
      name: http
