platform/kube/flux-system/apps/reviews.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reviews
spec:
  replicas: 1
  selector:
    matchLabels:
      app: reviews
  template:
    metadata:
      labels:
        app: reviews
    spec:
      containers:
        - name: reviews
          image: skeletondocker/istio-services:reviews-02abde028553afe90d9448f240967b4be04745fa
          ports:
            - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: reviews
spec:
  selector:
    app: reviews
  ports:
    - port: 8080
      name: http
