platform/kube/flux-system/apps/server-info.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-info
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: server-info
  template:
    metadata:
      labels:
        app: server-info
    spec:
      containers:
        - name: server-info
          image: skeletondocker/istio-services:server_info-e75937d32913e8f181e91cd0db7e56d5199e4204
          ports:
            - containerPort: 50051
              protocol: TCP

---
apiVersion: v1
kind: Service
metadata:
  name: server-info
  namespace: default
spec:
  selector:
    app: server-info
  ports:
    - port: 50051
      name: grpc
