platform/kube/flux-system/apps/reviews-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: reviews
spec:
  hosts:
    - "*"
  gateways:
    - istio-services-gateway
  http:
    - match:
        - uri:
            prefix: /reviews
      route:
        - destination:
            host: reviews
            port:
              number: 8080
