platform/kube/flux-system/apps/server-info-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: server-info
  namespace: default
spec:
  hosts:
    - "*"
  gateways:
    - istio-services-gateway
  http:
    - match:
        - uri:
            prefix: /server-info
      route:
        - destination:
            host: server-info
            port:
              number: 50051
